# gonzo-pit-strategy

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  session-ses_3a73.md
.github/: TODO.md
config/: README.md  config.py  database.json  inference.json  logging.json  model.json  pipeline_race_history.json  training.json
config/experiments/: dense_sweep.json  training_config_default.json
data/raw/: circuits_202503231047.tsv  constructorresults_202503231048.tsv  constructors_202503231048.tsv  constructorstandings_202503231048.tsv  constructorstandings_202503231937.tsv  drivers_202503231048.tsv  driverstandings_202503231048.tsv  driverstandings_202503231938.tsv  pitstops_202503231049.tsv  pitstops_202503231938.tsv  qualifying_202503231049.tsv  race_status_simplified_mapping.csv  races_202503231049.tsv  results_202503231049.tsv  seasons_202503231050.tsv  sprintresults_202503231050.tsv  sprintresults_202503231939.tsv  status_202503231050.tsv
db/: __init__.py  base.py  config.py  connection_pool.py  init_db.sql  raw_data_base_ddls.sql
db/migrations/: 001_schema_and_core_tables.sql  002_jolpica_setup.sql  002_raw_data.sql
db/models/: application_logs.py  dataset_versions.py  f1_models.py  model_metadata.py  model_metrics.py  training_data.py  training_metrics.py  training_runs.py  trianing_run.py
db/repositiries/: base_repository.py  data_repository.py  metrics_repository.py
db/repositories/: base_repository.py  data_repository.py  (+1 more)
dbt/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
docs/: JOLPICA_MIGRATION.md
gonzo-pit-strategy/: constants.py  exceptions.py  main.py
gonzo_pit_strategy/: main.py  output.csv
inference/: predictor.py
models/: model.py
notebooks/: eda_dataframe.ipynb  jolpica_data_eda.ipynb  race_data_eda.ipynb
notes/: DATABASE_SETUP.md  JOLPICA_F1_DATABASE_SCHEMA.md
security/: __init__.py  credentials.py  vault.py
tests/: test_config.py
training/: callbacks.py  data_loader.py  data_pipeline.py  evaluation.py  trainer.py
(+111 files in other folders)
