[project]
name = "gonzo-pit-strategy"
version = "0.1.0"
description = "F1 Pit Strategy Prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "hvac>=2.4.0",
    "keras>=3.13.0",
    "notebook>=7.5.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "tensorflow>=2.20.0",
]

[project.scripts]
gonzo-train = "gonzo_pit_strategy.cli.train:main"
gonzo-load = "gonzo_pit_strategy.cli.load_data:main"
gonzo-start = "gonzo_pit_strategy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gonzo_pit_strategy"]
